@@ -46,6 +46,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #16620: Fixed AttributeError in msilib.Directory.glob().
+
 - Issue #26013: Added compatibility with broken protocol 2 pickles created
   in old Python 3 versions (3.4.3 and lower).
 
